<resources>
    <string name="app_name">RadioMe</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Create account</string>
    <string name="more">More</string>
    <string name="christian_faith_radio">Christian Faith Radio</string>
    <string name="entertainment">Entertainment</string>
    <string name="sign_in">Sign in</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>