<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
    android:id="@+id/swipe_torefresh"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <ScrollView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight= "5dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_centerVertical="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Inspirational Radio"
                                android:textColor="@color/black"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <!--<TextView-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:text="@string/latest_youve_recently_read"-->
                            <!--android:textColor="@color/textView_sub_title_home_fragment"-->
                            <!--android:textSize="14sp"-->
                            <!--android:textStyle="bold" />-->

                        </LinearLayout>

                        <Button
                            android:id="@+id/button_inspirational"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"

                            android:layout_alignParentTop="true"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_marginTop="0dp"
                            android:layout_marginEnd="0dp"
                            android:layout_marginRight="0dp"
                            android:background="#00000000"
                            android:text="@string/more"
                            android:textAllCaps="false"
                            android:textColor="@color/btn_create"
                            android:textStyle="bold" />

                    </RelativeLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView_inspirational"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_centerVertical="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/christian_faith_radio"
                                android:textColor="@color/black"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <!--<TextView-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:text="@string/stories_youve_recently_read"-->
                            <!--android:textColor="@color/textView_sub_title_home_fragment"-->
                            <!--android:textSize="14sp"-->
                            <!--android:textStyle="bold" />-->

                        </LinearLayout>

                        <Button
                            android:textAllCaps="false"
                            android:layout_centerVertical="true"
                            android:id="@+id/button_christain"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:background="#00000000"
                            android:text="@string/more"
                            android:textColor="@color/btn_create"
                            android:textStyle="bold" />

                    </RelativeLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView_christain_faith"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_centerVertical="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/entertainment"
                                android:textColor="@color/black"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <!--<TextView-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:text="@string/stories_youve_recently_read"-->
                            <!--android:textColor="@color/textView_sub_title_home_fragment"-->
                            <!--android:textSize="14sp"-->
                            <!--android:textStyle="bold" />-->

                        </LinearLayout>

                        <Button
                            android:textAllCaps="false"
                            android:layout_centerVertical="true"
                            android:id="@+id/button_entertainment"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:background="#00000000"
                            android:text="@string/more"
                            android:textColor="@color/btn_create"
                            android:textStyle="bold" />

                    </RelativeLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView_entertainment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_centerVertical="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="FM Radio"
                                android:textColor="@color/black"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <!--<TextView-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:text="@string/stories_youve_recently_read"-->
                            <!--android:textColor="@color/textView_sub_title_home_fragment"-->
                            <!--android:textSize="14sp"-->
                            <!--android:textStyle="bold" />-->

                        </LinearLayout>

                        <Button
                            android:textAllCaps="false"
                            android:layout_centerVertical="true"
                            android:id="@+id/button_fm_radio"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:background="#00000000"
                            android:text="@string/more"
                            android:textColor="@color/btn_create"
                            android:textStyle="bold" />

                    </RelativeLayout>


                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView_fm_radio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>




    </ScrollView>
</LinearLayout>
</layout>

